--- a/assets/css/landing5.css
+++ b/assets/css/landing5.css
@@ -27,10 +27,10 @@
 	line-height:73px;
 	}
 	
-	.section-two-image-one {
+	/* .section-two-image-one {
 	display:inline-block;
 	margin-right:59px;
-	}
+	} */
 	
 	.list-left,.list-left-for {
 	list-style:none;
@@ -89,15 +89,10 @@
 	display:flex;
 	column-gap:238px;
 	justify-content:center;
-	margin:100px 300px;
+	margin: 100px 300px;
 	}
 	
-	.section-two-image {
-	display:flex;
-	justify-content:center;
-	margin:0;
-	padding:30px 0;
-	}
+	
 	
 	.section-two-content {
 	display:flex;
