--- a/assets/css/landing-card5.css
+++ b/assets/css/landing-card5.css
@@ -164,14 +164,13 @@
 
 
 @media screen and (max-width:1100px){
-	.section-two-image{
-		column-gap: 30px;
-	}
+
 }
 @media screen and (max-width:768px){
 	.section-two-image{
 		width: 178px;
 		height: 387px;
+		column-gap: 20px;
 	}
 	.island_poppup-Android1{
 		position: relative;
@@ -244,7 +243,12 @@
 	}
 }
 @media screen and (max-width:425px){
-
+	.section-two-image{
+		margin: 0;
+		column-gap: 20px;
+		justify-content: initial;
+		padding: 30px 6px;
+	}
 	.box-frame{
 		position: relative;
 		width: 137px;
@@ -274,6 +278,23 @@
 		border-top-right-radius: 10px;
 		border-bottom-right-radius: 20px;
 		
+	}
+	@keyframes Android1 {
+		0% {
+			left: 5px;
+		}
+		50%{
+			opacity: 0;
+			left: 5px;
+		}
+		60%{
+			opacity: 1;
+			left: 5px;
+		}
+		100% {
+			left: 5px;
+			opacity: 1;
+		}
 	}
 	@keyframes Android {
 		0% {
@@ -314,6 +335,10 @@
 	}
 }
 @media screen and (max-width:375px){
+	.section-two-image{
+		width: 150px;
+		height: 340px;
+	}
 	@keyframes Android {
 		0% {
 			left: 110px;
@@ -353,8 +378,46 @@
 			
 		}
 	}
+	.island_poppup-Android1{
+		bottom: 361px;
+		width: 117px;
+	}
+	.island_poppup-IOS1{
+		width: 30px;
+		bottom: 364px;
+		left: 120px;
+	}
+	.And1{
+		background-size: 125px 335px;
+		height: 325px;
+	}
+	.Mac1{
+		background-size: 30px 325px;
+		height: 325px;
+	}
 }
 @media screen and (max-width:320px){
+	.section-two-image{
+		width: 120px;
+		height: 250px;
+	}
+	@keyframes Android1 {
+		0% {
+			left: 5px;
+		}
+		50%{
+			opacity: 0;
+			left: 5px;
+		}
+		60%{
+			opacity: 1;
+			left: 5px;
+		}
+		100% {
+			left: 5px;
+			opacity: 1;
+		}
+	}
 	@keyframes Android {
 		0% {
 			left: 106px;
@@ -393,6 +456,25 @@
 			opacity: 1;
 			
 		}
+	}
+	.island_poppup-Android1{
+		bottom: 275px;
+		width: 90px;
+		border-bottom-left-radius: 20px;
+		border-top-left-radius: 20px;
+	}
+	.island_poppup-IOS1{
+		width: 25px;
+		bottom: 275px;
+		left: 95px;
+	}
+	.And1{
+		background-size: 100px 245px;
+		height: 240px;
+	}
+	.Mac1{
+		background-size: 25px 250px;
+		height: 240px;
 	}
 }
 
