--- a/assets/css/landing-card5.css
+++ b/assets/css/landing-card5.css
@@ -427,7 +427,7 @@
 	.card-block {
 	cursor:pointer;
 	margin-bottom:40px;
-	perspective:1000px;
+	perspective: 1000px;
 	}
 	
 	.product-inner {
@@ -436,6 +436,8 @@
 	width:100%;
 	height:75%;
 	transform-style:preserve-3d;
+	padding: 0;
+	margin: 0;
 	}
 	
 	.card-block-botton {
@@ -458,12 +460,12 @@
 	padding:8px;
 	}
 	
-	.card-3d {
+	/* .card-3d {
 	perspective:1000px;
 	cursor:pointer;
 	width:296px;
 	height:600px;
-	}
+	} */
 	
 	.product-front {
 	position:absolute;
@@ -480,6 +482,7 @@
 	position:relative;
 	height:300px;
 	transform:translateZ(-7.8px);
+	
 	}
 	
 	.left-side {
@@ -495,7 +498,10 @@
 	
 	.product-inner:hover {
 	transform:rotateY(180deg);
-	transition:transform 1.2s linear;
+	-webkit-transition: all 0.5s ease-in;
+	-moz-transition: all 0.5s ease-in;
+	-o-transition: all 0.5s ease-in;
+	transition:transform 0.5s linear;
 	}
 	
 	.back {
@@ -504,12 +510,14 @@
 	height:595px;
 	transform:rotateY(180deg);
 	left:-63px;
+	
 	}
 	
 	.front {
 	width:275px;
 	height:595px;
 	border-radius: 0px 0px 0px 0px;
+	
 	}
 	@media screen and (max-width:1920px){
 	.section-card {
