--- a/assets/css/landing5.css
+++ b/assets/css/landing5.css
@@ -86,14 +86,13 @@
 	}
 	
 	.section-two {
-	display:flex;
-	column-gap:238px;
-	justify-content:center;
-	margin: 100px 300px;
+		width: 100%;
+		display: flex;
+		column-gap: 238px;
+		justify-content: center;
+		margin: 77px 0
 	}
-	
-	
-	
+
 	.section-two-content {
 	display:flex;
 	flex-direction:column;
@@ -311,7 +310,7 @@
 	}
 	
 	.section-two {
-	column-gap:180px;
+	column-gap:140px;
 	}
 	
 	.section-as-iframe-video {
@@ -379,7 +378,23 @@
 	width:190px;
 	height:420px;
 	}
-	
+	.section-first-paragraf{
+		margin-bottom: 40px;
+		font-weight: 700;
+		font-size: 43px;
+		line-height: 12px;
+	}
+	.lead__download-links-list {
+		display: flex;
+		list-style: none;
+		column-gap: 13px;
+		margin-top: 40px;
+		padding: 0;
+	}
+	.image-two {
+		width: 202px;
+		height: 439px;
+	}
 	.section-first {
 	column-gap:5px;
 	}
@@ -499,7 +514,7 @@
 			align-items: center;
 			flex-direction: row;
 			column-gap: 147px;
-			padding-left: 86px;
+
 
 		}
 	  .section-two-content{
