--- a/assets/css/landing-card5.css
+++ b/assets/css/landing-card5.css
@@ -247,6 +247,10 @@
 		border-radius: 20px;
 		
 	}
+	.island_poppup-IOS1{
+		left: 138px;
+	}
+
 	.island_poppup-IOS{
 		position: absolute;
 		top: 2px;
@@ -460,7 +464,8 @@
 	}
 	.And1{
 		background-size: 100px 245px;
-		height: 240px;
+		height: 231px;
+		margin-top: 9px;
 	}
 	.Mac1{
 		background-size: 25px 250px;
