--- a/assets/css/header6.css
+++ b/assets/css/header6.css
@@ -20,7 +20,7 @@
     .video-container .close {
     position:absolute;
     top:4%;
-    right:120px;
+    right:7%;
     font-size:20px;
     cursor:pointer;
     z-index:1;
@@ -38,7 +38,7 @@
     box-shadow:0 20px 20px rgba(0,0,0,0.2);
     outline:none;
     transition:all .3s;
-    margin-left:80px;
+    margin-left:90px;
     margin-top:15px;
     z-index:11;
     }
@@ -480,8 +480,8 @@
     
     .video-container .close {
     position:absolute;
-    left:675px;
-    top:25px;
+    left: 685px;
+    top: 10px;
     }
     
     .close_menu {
@@ -632,7 +632,7 @@
     .video-container .close {
     position:absolute;
     left:370px;
-    top:10px;
+    top: 10px;
     }
     
     .button__play-video {
@@ -688,16 +688,16 @@
     }
     
     .video-container video {
-    width:330px;
-    height:309px;
-    margin-left:20px;
-    margin-top:17px;
+        width: 330px;
+        height: 270px;
+        margin-left: 20px;
+        margin-top: 0px;
     }
     
     .video-container .close {
     position:absolute;
-    left:310px;
-    top:35px;
+    left: 320px;
+    top: 10px;
     }
     
     .langs {
@@ -890,16 +890,16 @@
     }
     
     .video-container video {
-    width:290px;
-    height:280px;
-    margin-left:15px;
-    margin-top:18px;
+    width: 290px;
+    height: 230px;
+    margin-left: 15px;
+    margin-top: 0px;
     }
     
     .video-container .close {
     position:absolute;
-    left:270px;
-    top:30px;
+    left: 280px;
+    top: 10px;
     }
     
     .menu-links {
