--- a/assets/css/landing-card7.css
+++ b/assets/css/landing-card7.css
@@ -581,9 +581,9 @@
 	
 	.product-inner:hover {
 	transform:rotateY(180deg);
-	-webkit-transition: all 0.5s ease-in;
-	-moz-transition: all 0.5s ease-in;
-	-o-transition: all 0.5s ease-in;
+	animation-duration:all 0.5s ease-in;
+	/* -moz-transition: all 0.5s ease-in;
+	-o-transition: all 0.5s ease-in; */
 	transition:transform 0.5s linear;
 	}
 	
