--- a/assets/css/landing-card7.css
+++ b/assets/css/landing-card7.css
@@ -577,6 +577,7 @@
     position: relative;
     margin-left: -6px;
     bottom: 588px;
+		
 }
 	
 	.product-inner:hover {
@@ -599,7 +600,8 @@
 	.front {
 	width:275px;
 	height:595px;
-	border-radius: 0px 0px 0px 0px;
+	border-radius: 35px;
+	box-shadow: 0 4px 12px rgba(0,0,0,0.2), 0 16px 20px rgba(104, 194, 247, 0.2);
 	
 	}
 	@media screen and (max-width:1920px){
@@ -729,12 +731,15 @@
 	   width:137px;
 	   height:297px;
 	   margin-left:5px;
+		 border-radius: 15px;
 	   }
 
 	   .card-block {
 	   width:137px;
 	   height:297px;
 	   margin-bottom:140px;
+		 
+		 
 	   }
 
 	   .left-side {
