--- a/assets/css/landing-card9.css
+++ b/assets/css/landing-card9.css
@@ -573,7 +573,7 @@
 	
 	.left-side {
     width: 16px;
-    height: 97%;
+    height: 100%;
     background: #1e1d1d;
     transform: rotateY(90deg);
     margin-top: 309px;
@@ -604,7 +604,7 @@
 	width:275px;
 	height:595px;
 	border-radius: 35px;
-	box-shadow: 0 4px 12px rgba(0,0,0,0.2), 0 16px 20px rgba(104, 194, 247, 0.2);
+	/* box-shadow: 0 4px 12px rgba(0,0,0,0.2), 0 16px 20px rgba(104, 194, 247, 0.2); */
 	
 	}
 	@media screen and (max-width:1920px){
