--- a/assets/css/landing-card.css
+++ b/assets/css/landing-card.css
@@ -139,7 +139,7 @@
 	transform: scaleX(-1);
 }
 
-.And1{background: url(../animat/AndroidEng/ASAP.png);}
+.And1{background: url(../animat/AndroidEng/ASAP.png) no-repeat;}
 .And-1{background: url(../animat/AndroidEng/ASAP.png) no-repeat;}
 .And-2{background: url(../animat/AndroidEng/My\ profile.png) no-repeat;}
 .And-3{background: url(../animat/AndroidEng/SFERA\ Feed.png)no-repeat;}
@@ -147,7 +147,7 @@
 .And-5{background: url(../animat/AndroidEng/BlackBox.png)no-repeat;}
 .And-6{background: url(../animat/AndroidEng/Find\ Friends.png)no-repeat;}
 .And-7{background: url(../animat/AndroidEng/MeetNet.png)no-repeat;}
-.And-8{background: url(../animat/AndroidEng/Job\ Lite.png)no-repeat repeat;}
+.And-8{background: url(../animat/AndroidEng/Job\ Lite.png)no-repeat;}
 .And-9{background: url(../animat/AndroidEng/Choose.png)no-repeat;}
 
 @keyframes Android {
@@ -583,7 +583,7 @@
 		
 }
 	
-	.product-inner:hover {
+.card-block:hover .product-inner{
 	transform:rotateY(180deg);
 	animation-duration:all 0.5s ease-in;
 	/* -moz-transition: all 0.5s ease-in;
