--- a/assets/css/landing-card9.css
+++ b/assets/css/landing-card9.css
@@ -147,7 +147,7 @@
 .And-5{background: url(../animat/AndroidEng/BlackBox.png)no-repeat;}
 .And-6{background: url(../animat/AndroidEng/Find\ Friends.png)no-repeat;}
 .And-7{background: url(../animat/AndroidEng/MeetNet.png)no-repeat;}
-.And-8{background: url(../animat/AndroidEng/Job\ Lite.png)no-repeat repeat;}
+.And-8{background: url(../animat/AndroidEng/Job\ Lite.png)no-repeat;}
 .And-9{background: url(../animat/AndroidEng/Choose.png)no-repeat;}
 
 @keyframes Android {
@@ -180,7 +180,7 @@
 		height: 387px;
 		column-gap: 20px;
 	}
-	
+
 
 
 	.island_poppup-Android1 {
@@ -583,11 +583,11 @@
 		
 }
 	
-	.product-inner:hover {
+	.card-block:hover .product-inner {
 	transform:rotateY(180deg);
-	animation-duration:all 0.5s ease-in;
-	/* -moz-transition: all 0.5s ease-in;
-	-o-transition: all 0.5s ease-in; */
+	animation-duration: all 0.5s ease-in;
+	-moz-transition: all 0.5s ease-in;
+	-o-transition: all 0.5s ease-in;
 	transition:transform 0.5s linear;
 	}
 	
