--- a/assets/css/landing-card.css
+++ b/assets/css/landing-card.css
@@ -583,7 +583,7 @@
 		
 }
 	
-	.product-inner:hover {
+.card-block:hover .product-inner{
 	transform:rotateY(180deg);
 	animation-duration: all 0.5s ease-in;
 	-moz-transition: all 0.5s ease-in;
