--- a/assets/css/landing-card11.css
+++ b/assets/css/landing-card11.css
@@ -69,11 +69,10 @@
 	}
 }
 
-
 .box-frame{
 	position: relative;
 	right: 5px;
-	width: 220px; /*270 */
+	width: 220px; 
 	height: 600px;
 	border-radius: 30px;
 }
@@ -205,9 +204,6 @@
 		height: 387px;
 		column-gap: 20px;
 	}
-	
-
-
 	.island_poppup-Android1 {
     position: relative;
     bottom: 406px;
@@ -536,7 +532,7 @@
 	}
 	
 	.card-block {
-		margin-left: 10px;
+		/* margin-left: 10px; */
 		cursor:pointer;
 		margin-bottom:40px;
 		perspective: 1000px;
@@ -548,8 +544,8 @@
 	width:100%;
 	height:75%;
 	transform-style:preserve-3d;
-	padding: 0;
-	margin: 0;
+	/* padding: 0;
+	margin: 0; */
 	}
 	
 	.card-block-botton {
@@ -574,7 +570,7 @@
 	
 	.product-front {
 	position:absolute;
-	left:0px;
+	/* left:0px; */
 	width: 100%;
 	border-radius:35px;
 	transform:translateZ(7.8px);
