--- a/assets/css/landing-card11.css
+++ b/assets/css/landing-card11.css
@@ -137,6 +137,7 @@
 	opacity: 0;
 	animation: Android 4s infinite cubic-bezier(0.165, 0.84, 0.44, 1) alternate;
 	transform: scaleX(-1);
+	-webkit-transform: scaleX(-1);
 }
 
 .And1{background: url(../animat/AndroidEng/ASAP.png) no-repeat;}
@@ -230,7 +231,6 @@
     animation: IOS1 4s infinite cubic-bezier(0.165, 0.84, 0.44, 1) alternate;
     background-size: 40px 375px;
 }
-
 	@keyframes IOS1 {
 		0% {
 			right: 0px;
@@ -279,12 +279,10 @@
 		width: 137px;
 		height:300px;
 		border-radius: 20px;
-		
 	}
 	.island_poppup-IOS1{
 		left: 138px;
 	}
-
 	.island_poppup-IOS {
     position: absolute;
     top: 5px;
@@ -305,7 +303,6 @@
 		background-size: 147px 285px;
 		border-top-left-radius: 15px;
 		border-bottom-left-radius: 50px;
-		
 	}
 	@keyframes Android1 {
 		0% {
@@ -348,17 +345,14 @@
 		50%{
 			right: 107px;
 			opacity: 0;
-			
 		}
 		60%{
 			right: 107px;
-			opacity: 1;
-			
+			opacity: 1;	
 		}
 		100% {
 			left:107px;
 			opacity: 1;
-			
 		}
 	}
 }
@@ -367,45 +361,7 @@
 		width: 150px;
 		height: 314px;
 	}
-	/* @keyframes Android {
-		0% {
-			left: 19px;
-		}
-		50%{
-			left: 19px;
-			opacity: 0;
-			
-		}
-		60%{
-			left: 19px;
-			opacity: 1;
-			
-		}
-		100% {
-			left: 19px;
-			opacity: 1;
-		}
-	}
-	@keyframes IOS {
-		0% {
-			right: 111px;
-		}
-		50%{
-			right: 111px;
-			opacity: 0;
-			
-		}
-		60%{
-			right: 111px;
-			opacity: 1;
-			
-		}
-		100% {
-			left:111px;
-			opacity: 1;
-			
-		}
-	} */
+
 	.island_poppup-Android1{
 		bottom: 351px;
 		width: 117px;
@@ -416,18 +372,18 @@
 		left: 120px;
 	}
 	.And1 {
-    background-size: 142px 308px;
-    background-repeat: no-repeat;
-    bottom: 335px;
-    border-radius: 0;
-    border-bottom-left-radius: 31px;
-}
-.Mac1 {
-	background-size: 30px 304px;
-	background-repeat: no-repeat;
-	bottom: 339px;
-	border-bottom-right-radius: 20px;
-}
+  	background-size: 142px 308px;
+  	background-repeat: no-repeat;
+  	bottom: 335px;
+  	border-radius: 0;
+  	border-bottom-left-radius: 31px;
+	}
+	.Mac1 {
+		background-size: 30px 304px;
+		background-repeat: no-repeat;
+		bottom: 339px;
+		border-bottom-right-radius: 20px;
+	}
 }
 @media screen and (max-width:320px){
 	.section-two-image{
@@ -458,12 +414,10 @@
 		50%{
 			left: 17px;
 			opacity: 0;
-			
 		}
 		60%{
 			left: 17px;
 			opacity: 1;
-			
 		}
 		100% {
 			left: 17px;
@@ -477,17 +431,14 @@
 		50%{
 			left:100px;
 			opacity: 0;
-			
 		}
 		60%{
 			left:100px;
 			opacity: 1;
-			
 		}
 		100% {
 			left:100px;
 			opacity: 1;
-			
 		}
 	}
 	.island_poppup-Android1{
@@ -502,18 +453,16 @@
 		left: 95px;
 	}
 	.And1{
-			background-size: 100px 245px;
-			height: 243px;
-    	bottom: 273px;
-			width: 100px;
+		background-size: 100px 245px;
+		height: 243px;
+    bottom: 273px;
+		width: 100px;
 	}
 	.Mac1{
 		background-size: 25px 250px;
 		height: 240px;
 	}
 }
-
-
 .section-card {
 	background:#2e2e31;
 	padding:80px 555px;
@@ -532,20 +481,18 @@
 	}
 	
 	.card-block {
-		/* margin-left: 10px; */
 		cursor:pointer;
 		margin-bottom:40px;
 		perspective: 1000px;
 	}
 	
 	.product-inner {
-	transition:transform 1.2s linear;
+	transition:transform .5s linear;
 	position:relative;
 	width:100%;
 	height:75%;
+	-webkit-transform-style:preserve-3d;
 	transform-style:preserve-3d;
-	/* padding: 0;
-	margin: 0; */
 	}
 	
 	.card-block-botton {
@@ -573,6 +520,7 @@
 	/* left:0px; */
 	width: 100%;
 	border-radius:35px;
+	-webkit-transform: translateZ(7.8px);
 	transform:translateZ(7.8px);
 	}
 	
@@ -583,6 +531,7 @@
 	width:100%;
 	position:relative;
 	height:300px;
+	-webkit-transform: translateZ(-7.8px);
 	transform:translateZ(-7.8px);
 	
 	}
@@ -591,6 +540,7 @@
     width: 16px;
 		height: 100%;
     background: #1e1d1d;
+		-webkit-transform: rotateY(90deg);
     transform: rotateY(90deg);
     margin-top: 302px;
     position: relative;
@@ -598,17 +548,19 @@
     bottom: 588px;
 }
 .card-block:hover .product-inner{
+	-webkit-transform: rotateY(180deg);
 	transform:rotateY(180deg);
-	animation-duration:all 0.5s ease-in;
+	/* animation-duration:all 0.5s ease-in; */
 	/* -moz-transition: all 0.5s ease-in;
 	-o-transition: all 0.5s ease-in; */
-	transition:transform 0.5s linear;
+	transition:transform 0.3s linear;
 	}
 	
 	.back {
 	position:relative;
 	width:275px;
 	height:595px;
+	-webkit-transform:rotateY(180deg);
 	transform:rotateY(180deg);
 	}
 	
@@ -690,6 +642,7 @@
 				.left-side {
 					width: 16px;
 					background: #1e1d1d;
+					-webkit-transform:rotateY(90deg);
 					transform: rotateY(90deg);
 					margin-top: 302px;
 					position: relative;
@@ -746,6 +699,7 @@
        width: 15px;
        height: 122%;
        background: #1e1d1d;
+			 -webkit-transform:rotateY(90deg);
        transform: rotateY(90deg);
        margin-top: 299px;
        position: relative;
