--- a/assets/css/apps11.css
+++ b/assets/css/apps11.css
@@ -3,6 +3,7 @@
 	}
 	
 	.lead__text {
+	-webkit-display:flex;
 	display:flex;
 	align-items:center;
 	font-size:20px;
@@ -14,6 +15,7 @@
 	.apps__subapps {
 	background:#2e2e31;
 	color:#fff;
+	-webkit-display:flex;
 	display:flex;
 	column-gap:160px;
 	align-items:center;
@@ -39,6 +41,7 @@
 	}
 	
 	.apps__briefs-item-list {
+	-webkit-display:flex;
 	display:flex;
 	flex-direction:column;
 	justify-content:center;
@@ -57,6 +60,7 @@
 	.apps__subapps-list-item-link {
 	color:rgba(255,255,255,.87);
 	text-decoration:none;
+	-webkit-display:flex;
 	display:flex;
 	flex-direction:column;
 	justify-content:center;
