--- a/assets/css/landing2.css
+++ b/assets/css/landing2.css
@@ -28,12 +28,6 @@
   font-size: 60px;
   line-height: 73px;
 }
-
-/* .section-two-image-one {
-	display:inline-block;
-	margin-right:59px;
-	} */
-
 .list-left,
 .list-left-for {
   list-style: none;
@@ -140,7 +134,8 @@ a {
 }
 
 .section-two-content-message {
-  background-image: url(../image-lending/general/group1.png);
+  padding: 0 80px;
+  background-image: url(../image-lending/general/line1.png);
   background-repeat: no-repeat;
   font-weight: 400;
   font-size: 36px;
@@ -149,14 +144,14 @@ a {
 }
 
 .section-two-content-social {
-  background-image: url(../image-lending/general/group2.png);
+  padding: 0px 104px;
+  background-image: url(../image-lending/general/line2.png);
   background-repeat: no-repeat;
   font-size: 44px;
   height: 60px;
   text-align: center;
-  line-height: 58px;
+  line-height: 15px;
 }
-
 .section-as-heading {
   margin-top: 200px;
   text-align: center;
@@ -531,8 +526,11 @@ a {
     font-size: 35px;
   }
   .section-two-content-social {
+    padding: 0px 60px;
     font-size: 35px;
-  }
+    height: 60px;
+    line-height: 25px;
+}
 }
 
 @media screen and (max-width: 768px) {
@@ -685,6 +683,7 @@ a {
     font-weight: 600;
     font-size: 22px;
     line-height: 26px;
+    padding: 0;
   }
 
   .section-two-content-number {
